@@ -43,7 +43,7 @@ enum { longaUp_ICON, brevis_ICON, note_ICON, note2_ICON, note4_ICON, note8_ICON,
       textLeft_ICON, textCenter_ICON, textRight_ICON, textTop_ICON, textBottom_ICON, textVCenter_ICON,
       textSuper_ICON, textSub_ICON,
       fotomode_ICON,
-      hraster_ICON, vraster_ICON,
+      hraster_ICON, vraster_ICON, repitch_ICON,
       voice1_ICON, voice2_ICON, voice3_ICON, voice4_ICON,
       ICONS
       };
