@@ -581,7 +581,7 @@ MuseScore::MuseScore()
       entryTools->addAction(a);
 
       QStringList sl1;
-      sl1 << "pad-note-64" << "pad-note-32" << "pad-note-16" << "pad-note-8"
+      sl1 << "repitch" << "pad-note-64" << "pad-note-32" << "pad-note-16" << "pad-note-8"
          << "pad-note-4" << "pad-note-2" << "pad-note-1" << "note-breve" << "note-longa"
          << "pad-dot"
          << "pad-dotdot" << "tie" << "pad-rest";
