@@ -1,6 +1,7 @@
 19.feb (lv)
       - MusicXML import fixes: Jumps and Markers
        (ws)
+      - implementation of "repitch" mode for note entry
       - "add soundfont" must be prepended in the synthesizer font list
       - load soundfont list in the proper order
       - fix #9263: down button in synthesizer causes crash
